--- a/.github/workflows/create_or_update_fg_job.yml
+++ b/.github/workflows/create_or_update_fg_job.yml
@@ -5,7 +5,8 @@ name: Create or update FG creation job on Hopsworks
 
 on:
   push:
-    branches: [ main ]
+    paths:
+      - 'code/fg/FG_VERSION'
 
 jobs:
   build:
