--- a/.github/workflows/create_or_update_fg_job.yml
+++ b/.github/workflows/create_or_update_fg_job.yml
@@ -40,9 +40,15 @@ jobs:
         HOPSWORKS_HOST: ${{ secrets.HOPSWORKS_HOST }}
       run: python3 code/fg/create_or_update_job.py
 
+    - name: Read FG version
+      id: read_fg_version
+      uses: andstor/file-reader-action@v1
+      with:
+        path: 'code/fg/FG_VERSION'      
+
     - name: Run Create Feature Groups
       env:
         HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
         HOPSWORKS_PROJECT: ${{ secrets.HOPSWORKS_PROJECT }}
         HOPSWORKS_HOST: ${{ secrets.HOPSWORKS_HOST }}
-      run: python3 code/fg/run_job.py
+      run: python3 code/fg/run_job.py --version "${ steps.read_fg_version.outputs.contents }"
