--- a/.github/workflows/create_or_update_fg_job.yml
+++ b/.github/workflows/create_or_update_fg_job.yml
@@ -3,6 +3,7 @@ name: FeatureGroup CI/CD on Hopsworks
 on:
   push:
     paths:
+      - 'code/*'      
       - 'code/fg/FG_VERSION'
 
 jobs:
@@ -43,5 +44,4 @@ jobs:
         HOPSWORKS_PROJECT: ${{ secrets.HOPSWORKS_PROJECT }}
         HOPSWORKS_HOST: ${{ secrets.HOPSWORKS_HOST }}
       run: |
-        echo "VERSION=$(cat ./code/fg/FG_VERSION)" >> $GITHUB_ENV
-        python3 code/fg/run_job.py --version ${VERSION}
+        python3 code/fg/run_job.py --version $(cat ./code/fg/FG_VERSION)
