--- a/.github/workflows/create_or_update_fg_job.yml
+++ b/.github/workflows/create_or_update_fg_job.yml
@@ -3,7 +3,7 @@ name: FeatureGroup CI/CD on Hopsworks
 on:
   push:
     paths:
-      - 'code/*'      
+      - 'code/**'      
       - 'code/fg/FG_VERSION'
 
 jobs:
