--- a/.github/workflows/create_or_update_fg_job.yml
+++ b/.github/workflows/create_or_update_fg_job.yml
@@ -45,3 +45,18 @@ jobs:
         HOPSWORKS_HOST: ${{ secrets.HOPSWORKS_HOST }}
       run: |
         python3 code/utils/run_job.py --name create_fg --version $(cat ./code/fg/FG_VERSION)
+
+    - name: Create or Update Training
+      env:
+        HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
+        HOPSWORKS_PROJECT: ${{ secrets.HOPSWORKS_PROJECT }}
+        HOPSWORKS_HOST: ${{ secrets.HOPSWORKS_HOST }}
+      run: python3 code/utils/create_or_update_job.py --name training --appPath Jupyter/Hopsworks-CI-CD/code/training/training.ipynb
+
+    - name: Run training job
+      env:
+        HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
+        HOPSWORKS_PROJECT: ${{ secrets.HOPSWORKS_PROJECT }}
+        HOPSWORKS_HOST: ${{ secrets.HOPSWORKS_HOST }}
+      run: |
+        python3 code/utils/run_job.py --name training --version $(cat ./code/fg/FG_VERSION)
