--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -44,3 +44,18 @@ jobs:
         HOPSWORKS_HOST: ${{ secrets.HOPSWORKS_HOST }}
       run: |
         python3 code/utils/run_job.py --name training --version $(cat ./code/fg/FG_VERSION)
+
+    - name: Create deploy job
+      env:
+        HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
+        HOPSWORKS_PROJECT: ${{ secrets.HOPSWORKS_PROJECT }}
+        HOPSWORKS_HOST: ${{ secrets.HOPSWORKS_HOST }}
+      run: python3 code/utils/create_or_update_job.py --name deploy --appPath Jupyter/Hopsworks-CI-CD/code/deploy/deploy.ipynb
+
+    - name: Run deploy job
+      env:
+        HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
+        HOPSWORKS_PROJECT: ${{ secrets.HOPSWORKS_PROJECT }}
+        HOPSWORKS_HOST: ${{ secrets.HOPSWORKS_HOST }}
+      run: |
+        python3 code/utils/run_job.py --name deploy 
